<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatbot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>vault_description</depend>
  <depend>vault_localization</depend>
  <depend>realsense2_camera</depend>

  <depend>chatbot_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>