<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatbot_bringup</name>
  <version>1.3.2</version>
  <description>Bringup for chatbot_ros</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>audio_common</depend>
  <depend>llama_bringup</depend>
  <depend>whisper_bringup</depend>
  <depend>piper_bringup</depend>
  <depend>chatbot_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>